--- a/login.html
+++ b/login.html
@@ -663,7 +663,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-link pr-5" href="sectionHome" onclick="display('sectionHome')">Home</a>
+                        <a class="nav-link pr-5" onclick="display('sectionHome')">Home</a>
                         <a class="nav-link pl-5" style="color:##FF0000;" href="javascript:void(0);">Log Out</a>
                     </div>
                 </div>
