--- a/login.html
+++ b/login.html
@@ -328,7 +328,7 @@
                         <a class="nav-link" href="#deliveryPaymentSection" id="navItem3">Delivery & Payment</a>
                         <a class="nav-link" href="#followUsSection" id="navItem4">Follow Us</a>
                         <a class="nav-link" href="#sectionCart" onclick="display('sectionCart')" id="navItem4">Cart</a>
-                        <a style="color:#FF0000;" class="nav-link" id="navItem5">Log Out</a>
+                        <a style="color:#D9534F;" class="nav-link" id="navItem5" href="index.html">Log Out</a>
                     </div>
                 </div>
             </div>
@@ -664,7 +664,7 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
                         <a class="nav-link pr-5" onclick="display('sectionHome')">Home</a>
-                        <a class="nav-link pl-5" style="color:##FF0000;" href="javascript:void(0);">Log Out</a>
+                        <a style="color:#D9534F;" class="nav-link" id="navItem5" href="index.html">Log Out</a>
                     </div>
                 </div>
             </div>
