--- a/login.html
+++ b/login.html
@@ -663,7 +663,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav ml-auto">
-                        <a class="nav-link pr-5" onclick="display('sectionHome')">Home</a>
+                        <a style="color:#04AA6D;" class="nav-link pr-5" onclick="display('sectionHome')">Home</a>
                         <a style="color:#D9534F;" class="nav-link" id="navItem5" href="index.html">Log Out</a>
                     </div>
                 </div>
