--- a/login.html
+++ b/login.html
@@ -16,6 +16,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
     <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
+    <script>
+        function addtocart(){
+            alert("Item added to cart Succesfully");
+        }
+    </script>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
 
@@ -434,7 +439,7 @@
                         <div class="shadow menu-item-card p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-ginger-fried-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Non-Veg Starters</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -443,7 +448,7 @@
                         <div class="shadow menu-item-card p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-veg-starters-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Veg Starters</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -452,7 +457,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-soup-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Soups</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -461,7 +466,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-grilled-seafood-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Fish & Sea food</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -470,7 +475,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-hyderabadi-biryani-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Main Course</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -479,7 +484,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-mushroom-noodles-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Noodles</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -488,7 +493,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-gluten-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Salads</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
                         </div>
@@ -497,7 +502,7 @@
                         <div class="menu-item-card shadow p-3 mb-3">
                             <img src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/em-coffee-bourbon-img.png" class="menu-item-image w-100" />
                             <h1 class="menu-card-title">Desserts</h1>
-                            <a href="" class="menu-item-link">
+                            <a onclick="addtocart()" class="menu-item-link">
                                 Add to cart
                             </a>
 
