--- a/login.html
+++ b/login.html
@@ -781,7 +781,7 @@
                 const blob = new Blob([billText], { type: "text/plain" });
                 const link = document.createElement("a");
                 link.href = URL.createObjectURL(blob);
-                link.download = "bill.txt";
+                link.download = "bill.pdf";
                 link.click();
             };
 
