--- a/login.html
+++ b/login.html
@@ -694,6 +694,7 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cartItems = [];
@@ -770,20 +771,38 @@
                 const { jsPDF } = window.jspdf;
                 const doc = new jsPDF();
 
-                doc.setFontSize(16);
-                doc.text("Bill Summary", 10, 10);
+                // Add logo
+                const imgData = "https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-img.png";
+                doc.addImage(imgData, "PNG", 10, 10, 40, 20);
 
-                let startY = 20;
-                cartItems.forEach((item, index) => {
-                    const itemTotal = item.price * item.quantity;
-                    doc.text(`${index + 1}. ${item.title}`, 10, startY);
-                    doc.text(`₹${item.price} x ${item.quantity} = ₹${itemTotal.toFixed(2)}`, 60, startY);
-                    startY += 10;
+                // Add Title
+                doc.setFontSize(18);
+                doc.text("FoodMunch Bill", 70, 25);
+
+                // Add Table
+                const tableData = cartItems.map((item) => [
+                    item.title,
+                    `₹${item.price.toFixed(2)}`,
+                    item.quantity,
+                    `₹${(item.price * item.quantity).toFixed(2)}`
+                ]);
+                const totalPrice = cartItems.reduce((total, item) => total + item.price * item.quantity, 0);
+                const gst = totalPrice * 0.12;
+                const finalTotal = totalPrice + gst;
+
+                doc.autoTable({
+                    startY: 40,
+                    head: [["Item", "Price", "Quantity", "Total"]],
+                    body: tableData,
                 });
 
-                const totalAmount = cartItems.reduce((total, item) => total + item.price * item.quantity, 0);
-                doc.text(`Total Amount: ₹${totalAmount.toFixed(2)}`, 10, startY + 10);
+                // Add totals
+                doc.text(`Subtotal: ₹${totalPrice.toFixed(2)}`, 14, doc.autoTable.previous.finalY + 10);
+                doc.text(`GST (12%): ₹${gst.toFixed(2)}`, 14, doc.autoTable.previous.finalY + 20);
+                doc.setFont("bold");
+                doc.text(`Total: ₹${finalTotal.toFixed(2)}`, 14, doc.autoTable.previous.finalY + 30);
 
+                // Save PDF
                 doc.save("bill.pdf");
             };
 
