--- a/login.html
+++ b/login.html
@@ -28,7 +28,21 @@
             width: 80px;
             height: 70px;
         }
-
+        .menu-item-card {
+            border: 1px solid #ddd;
+            padding: 15px;
+            margin: 10px;
+            text-align: center;
+        }
+        .menu-item-link {
+            display: inline-block;
+            background-color: #ff5722;
+            color: white;
+            padding: 10px;
+            text-decoration: none;
+            margin-top: 10px;
+            border-radius: 5px;
+        }
         #navItem1 {
             color: #323f4b;
             font-family: "Roboto";
@@ -695,6 +709,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const cartItems = [];
@@ -702,92 +717,92 @@
             const totalPriceElement = document.getElementById("totalPrice");
             const checkoutButton = document.getElementById("checkoutBtn");
 
-            const addToCartLinks = document.querySelectorAll(".menu-item-link");
-
-            addToCartLinks.forEach((link) => {
-                link.addEventListener("click", (event) => {
+            // Add to Cart Click Event
+            document.querySelectorAll('.menu-item-link').forEach((link) => {
+                link.addEventListener('click', function(event) {
                     event.preventDefault();
-                    const menuCard = link.closest(".menu-item-card");
-                    const itemTitle = menuCard.querySelector(".menu-card-title").textContent.trim();
-                    const itemImage = menuCard.querySelector(".menu-item-image").src;
-                    const itemPrice = parseFloat(menuCard.querySelector(".menu-item-price").textContent.replace("Price: ₹", "").trim());
+                    const title = this.getAttribute('data-title');
+                    const price = parseFloat(this.getAttribute('data-price'));
 
-                    const existingItem = cartItems.find((item) => item.title === itemTitle);
+                    // Check if item already in cart
+                    const existingItem = cartItems.find(item => item.title === title);
 
                     if (existingItem) {
                         existingItem.quantity += 1;
                     } else {
-                        cartItems.push({ title: itemTitle, image: itemImage, price: itemPrice, quantity: 1 });
+                        cartItems.push({ title, price, quantity: 1 });
                     }
+
                     updateCartUI();
                 });
             });
 
             const updateCartUI = () => {
                 cartContent.innerHTML = cartItems.map((item, index) => `
-                    <div class="row mb-3 align-items-center">
-                        <div class="col-md-2">
-                            <img src="${item.image}" class="w-100" />
+                    <div class="row mb-3">
+                        <div class="col-md-8">
+                            <h5>${item.title}</h5>
+                            <p>₹${item.price} x ${item.quantity}</p>
                         </div>
                         <div class="col-md-4">
-                            <h5>${item.title}</h5>
-                            <p>Price: ₹${item.price}</p>
-                        </div>
-                        <div class="col-md-3">
-                            <input type="number" class="form-control quantity-input" min="1" value="${item.quantity}" data-index="${index}" />
-                        </div>
-                        <div class="col-md-3">
-                            <button class="btn btn-danger btn-sm" onclick="removeItem(${index})">Remove</button>
+                            <button class="btn btn-sm btn-danger" onclick="removeItem(${index})">Remove</button>
                         </div>
                     </div>
-                `).join("");
+                `).join('');
 
-                updateTotalPrice();
-                attachQuantityListeners();
+                const totalPrice = cartItems.reduce((total, item) => total + (item.price * item.quantity), 0);
+                totalPriceElement.textContent = totalPrice.toFixed(2);
             };
 
-            const updateTotalPrice = () => {
-                const totalPrice = cartItems.reduce((total, item) => total + item.price * item.quantity, 0);
-                totalPriceElement.textContent = `Total Price: ₹${totalPrice.toFixed(2)}`;
+            const removeItem = (index) => {
+                cartItems.splice(index, 1);
+                updateCartUI();
             };
 
-            const attachQuantityListeners = () => {
-                const quantityInputs = document.querySelectorAll(".quantity-input");
-                quantityInputs.forEach((input) => {
-                    input.addEventListener("change", (event) => {
-                        const index = parseInt(event.target.getAttribute("data-index"), 10);
-                        const newQuantity = parseInt(event.target.value, 10);
-                        if (newQuantity > 0) {
-                            cartItems[index].quantity = newQuantity;
-                            updateTotalPrice();
-                        } else {
-                            event.target.value = cartItems[index].quantity; // Reset to current value
-                        }
-                    });
-                });
-            };
-
+            // Generate PDF Function
             const generatePDF = () => {
                 const { jsPDF } = window.jspdf;
                 const doc = new jsPDF();
 
-                doc.setFontSize(16);
-                doc.text("Bill Summary", 10, 10);
+                // Add logo
+                const logoUrl = "https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/food-munch-img.png";
+                doc.addImage(logoUrl, "PNG", 10, 10, 40, 20);
 
-                let startY = 20;
-                cartItems.forEach((item, index) => {
-                    const itemTotal = item.price * item.quantity;
-                    doc.text(`${index + 1}. ${item.title}`, 10, startY);
-                    doc.text(`₹${item.price} x ${item.quantity} = ₹${itemTotal.toFixed(2)}`, 60, startY);
-                    startY += 10;
+                // Title
+                doc.setFontSize(18);
+                doc.text("FoodMunch Bill", 70, 25);
+
+                // Prepare Table Data
+                const tableData = cartItems.map(item => [
+                    item.title,
+                    `₹${item.price.toFixed(2)}`,
+                    item.quantity,
+                    `₹${(item.price * item.quantity).toFixed(2)}`
+                ]);
+
+                const totalPrice = cartItems.reduce((total, item) => total + (item.price * item.quantity), 0);
+                const gst = totalPrice * 0.12;
+                const finalTotal = totalPrice + gst;
+
+                // Add Table
+                doc.autoTable({
+                    startY: 40,
+                    head: [["Item", "Price", "Quantity", "Total"]],
+                    body: tableData,
                 });
 
-                const totalAmount = cartItems.reduce((total, item) => total + item.price * item.quantity, 0);
-                doc.text(`Total Amount: ₹${totalAmount.toFixed(2)}`, 10, startY + 10);
+                // Add Totals
+                const finalY = doc.autoTable.previous.finalY + 10;
+                doc.text(`Subtotal: ₹${totalPrice.toFixed(2)}`, 14, finalY);
+                doc.text(`GST (12%): ₹${gst.toFixed(2)}`, 14, finalY + 10);
+                doc.setFont("bold");
+                doc.text(`Total: ₹${finalTotal.toFixed(2)}`, 14, finalY + 20);
 
-                doc.save("bill.pdf");
+                // Download PDF
+                doc.save("foodmunch-bill.pdf");
             };
 
+            // Checkout Button
             checkoutButton.addEventListener("click", () => {
                 if (cartItems.length > 0) {
                     generatePDF();
@@ -795,11 +810,6 @@
                     alert("Your cart is empty!");
                 }
             });
-
-            window.removeItem = (index) => {
-                cartItems.splice(index, 1);
-                updateCartUI();
-            };
         });
     </script>
 
