--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     }
 
     .right {
-        background: url("https://media-hosting.imagekit.io//a11db132e30a4d23/pngwing.com1_.png.webp?Expires=1736160384&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=jNyGLsJ8vOUbFs9YsY8tMxbXLZ0RpPsxBf7VTMtExvWx-sHSBQ8egki1YLwaalrWCrw0zDeBtvwC4Q~AortzasGG-A7q9gCFaiqfwkBJbiB3hArmLpHOp24qLS-3n9HNKrCNjiZ0xNl~NXktxOaCaHPpr7tnCSJg1H8NQ6Rdxm2CMrZFFeSnftYCy4Tg0MeUDVWDge3lkPusEbVQsFY1XcJPTgIlTYNjZ3M3F4Vtrj0wDLpHirjJH2oP6CvrzpCTKlWZnJJId1GF8vd1YGltf6DnGkJbLnA7F193n7DiG3e4F08Rjtk2sQFsWzwCswc-JggO-cLVO1wBBBVfSmlGDQ__");
+        background: url("bg.jpg");
         color: #ff0808;
         position: relative;
         height: 150vh;
